[Layout] general layout issues on mobile

--- a/static/scss/_style.scss
+++ b/static/scss/_style.scss
@@ -702,6 +702,10 @@ hr {
 	 	height: 85px;
 	 }
 
+     #nav {
+         //margin-top:-0.4em;
+     }
+
 	 #header-shadow{
 	 	height: 70px;
 	 }
